# presidium

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
docs/: index.md  log.md
docs/architecture/: overview.md  packages.md  stack.md
docs/design/: agent-registry-requirements.md  agent-registry.md  agt-inspiration.md  approval-service-requirements.md  approval-service.md  audit-enricher-requirements.md  audit-enricher.md  credential-provider-requirements.md  credential-provider.md  deepeval-integration.md  eval-framework.md  hero-demo-candidates.md  http-gateway.md  implementation-plan.md  llm-gateway.md  mcp-gateway.md  policy-engine-requirements.md  policy-engine.md  topology-integration-requirements.md  topology-integration.md  trust-attestation.md
docs/guides/: getting-started.md
docs/research/: aaa-patterns.md  agent-registry-research.md  competitive-landscape.md  fiddler-relationship.md  market-analysis.md  monetization.md
docs/rfcs/: 001-presidium-scope.md  002-multi-dimensional-evaluation.md
docs/vision/: manifesto.md  positioning.md  prd.md  roadmap.md
