[project]
name = "presidium-workspace"
version = "0.1.0"
description = "The governed agent platform built on Civitas — workspace root"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Jeryn Mathew", email = "jerynmathew@gmail.com" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["_nonexistent"]

[tool.uv.sources]
civitas = { git = "https://github.com/civitas-io/python-civitas.git", branch = "main" }
presidium = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
